--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ default: &default
 development:
   adapter: mysql2
   encoding: utf8
-  database: c9
+  database: mintoo
   username: <%=ENV['C9_USER']%>
   host: <%=ENV['IP']%>
 
